--- a/temp2_pynb.ipynb
+++ b/temp2_pynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp2.pynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPznaPzQhpF+t0tk6sp0pRJ",
+      "authorship_tag": "ABX9TyNgpWxRvFzzPHb0ODu1qdGY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,7 +107,7 @@
         "gray()\n",
         "show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -129,6 +129,106 @@
       "metadata": {
         "id": "IdX-vnz5BFpf",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 323
+        },
+        "outputId": "0cb228cd-a355-4da1-e758-a3130427f1a5"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import random as rand\n",
+        "A=np.zeros(25)\n",
+        "A=A.reshape(5,5)\n",
+        "v=np.zeros(5)\n",
+        "v=v.reshape(5,1)\n",
+        "for ix in range(5):\n",
+        "  v[ix][0]=rand.randint(0,10)\n",
+        "  for iy in range(5):\n",
+        "    A[ix,iy]=rand.randint(0,10)\n",
+        "print(\"A=\\n\",A)\n",
+        "print(\"v=\\n\",v)\n",
+        "x=np.linalg.solve(A,v)\n",
+        "print(\"Solving for x in Ax=v, x=\\n\",x)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "A=\n",
+            " [[10.  6.  9.  7. 10.]\n",
+            " [ 9.  5.  4. 10.  1.]\n",
+            " [10.  4.  3.  0.  7.]\n",
+            " [ 3.  0.  8.  3. 10.]\n",
+            " [ 2.  6. 10.  8.  9.]]\n",
+            "v=\n",
+            " [[ 3.]\n",
+            " [ 3.]\n",
+            " [10.]\n",
+            " [ 3.]\n",
+            " [ 0.]]\n",
+            "Solving for x in Ax=v, x=\n",
+            " [[ -1.54765432]\n",
+            " [  0.06765432]\n",
+            " [-12.20740741]\n",
+            " [  5.65876543]\n",
+            " [  8.83259259]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N7PH3HEyguFA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "92e80a1b-c7ee-4532-fc07-09db735a8e46"
+      },
+      "source": [
+        "from numpy.linalg import inv\n",
+        "import random as rand\n",
+        "A=np.zeros(25)\n",
+        "A=A.reshape(5,5)\n",
+        "for ix in range(5):\n",
+        "  for iy in range(5):\n",
+        "    A[ix,iy]=rand.randint(0,10)\n",
+        "invA = inv(A)\n",
+        "print(\"A=\\n\",A)\n",
+        "print(\"A inverse = \\n\",invA)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "A=\n",
+            " [[ 6.  3.  1.  3.  1.]\n",
+            " [ 0.  1.  3.  8.  7.]\n",
+            " [ 2.  3.  8.  2.  8.]\n",
+            " [ 3.  8.  7.  3.  9.]\n",
+            " [ 0.  5.  9. 10.  3.]]\n",
+            "A inverse = \n",
+            " [[ 0.17435203 -0.01550952  0.08920579 -0.07484126 -0.03528677]\n",
+            " [-0.03705631 -0.05162902 -0.17955657  0.19381701  0.03018632]\n",
+            " [-0.00739044 -0.09456646  0.15800978 -0.09055897  0.07343604]\n",
+            " [ 0.03445404  0.08171125 -0.06058083 -0.02852087  0.04496721]\n",
+            " [-0.03091496  0.09737691  0.02716769  0.04371812 -0.08717602]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bg_LqBYLiUlN",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
@@ -136,16 +236,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "tOc1rEYxPMD7",
-        "colab_type": "text"
-      },
-      "source": [
-        "dlfkgjfdlkgjflkjlkfjgdflkgjdflgkjfdglkjfdglkj"
-      ]
     }
   ]
 }
