--- a/temp2_pynb.ipynb
+++ b/temp2_pynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp2.pynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNgpWxRvFzzPHb0ODu1qdGY",
+      "authorship_tag": "ABX9TyMMf0NTfsok1lBgULLUsb1w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,7 +151,7 @@
         "x=np.linalg.solve(A,v)\n",
         "print(\"Solving for x in Ax=v, x=\\n\",x)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,7 +202,7 @@
         "print(\"A=\\n\",A)\n",
         "print(\"A inverse = \\n\",invA)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,6 +228,49 @@
       "cell_type": "code",
       "metadata": {
         "id": "Bg_LqBYLiUlN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4122ba8e-0b90-4333-9833-b41cbd782113"
+      },
+      "source": [
+        "from math import sin,exp,cos,log\n",
+        "def f(x):\n",
+        "  return exp(1-x**3)-x ## x=exp(1-x**3)\n",
+        "\n",
+        "a=-5\n",
+        "b=5\n",
+        "midpoint=0.5*(a+b)\n",
+        "eval=f(midpoint)\n",
+        "if (f(a)*f(b) > 0): print(\"No good, initial endpoints have the same sign\")\n",
+        "nmax=10000 ## break if we get stuck\n",
+        "n=0\n",
+        "epsilon=1e-8 ### how close we want to get\n",
+        "\n",
+        "while((abs(b-a) > epsilon) and n < nmax):\n",
+        "  if ((f(midpoint) * f(a)) > 0): a = midpoint\n",
+        "  else: b = midpoint\n",
+        "  midpoint=0.5*(a+b)\n",
+        "  n = n+1\n",
+        "print(\"It took\", n, \"iterations\", \" and midpoint = \", midpoint)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "It took 30 iterations  and midpoint =  1.0000000009313226\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QBkugBITK7yG",
         "colab_type": "code",
         "colab": {}
       },
