--- a/temp2_pynb.ipynb
+++ b/temp2_pynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp2.pynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMMf0NTfsok1lBgULLUsb1w",
+      "authorship_tag": "ABX9TyPTHZLUBZkrdNQcKLUCzv7O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,7 +256,7 @@
         "  n = n+1\n",
         "print(\"It took\", n, \"iterations\", \" and midpoint = \", midpoint)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,6 +271,45 @@
       "cell_type": "code",
       "metadata": {
         "id": "QBkugBITK7yG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b0ddc1de-9c86-4b7d-c161-3fb27d1ce46b"
+      },
+      "source": [
+        "def f(x):\n",
+        "  return 123*x**6 - 456*x**5 + 789*x**4 - 1012*x**3 + 3456*x**2 - 7890*x - 123456\n",
+        "\n",
+        "def fp(x):\n",
+        "  return 6*123*x**5 - 5*456*x**4 + 4*789*x**3 - 3*1012*x**2 + 2*3456*x - 7890\n",
+        "\n",
+        "accuracy = 1e-12\n",
+        "delta = 1.0\n",
+        "x = 1e10\n",
+        "N=0\n",
+        "while abs(delta) > accuracy:\n",
+        "  delta = f(x)/fp(x)\n",
+        "  x -= delta\n",
+        "  N=N+1\n",
+        "print(\"It took\", N, \"iterations to find x = \", x, \"with f(x) = \", f(x))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "It took 126 iterations to find x =  3.74107809105797 with f(x) =  -2.9103830456733704e-11\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XWJxd5j8cvAS",
         "colab_type": "code",
         "colab": {}
       },
