--- a/temp2_pynb.ipynb
+++ b/temp2_pynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp2.pynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNG2i2xRPMkznw8kEK5doec",
+      "authorship_tag": "ABX9TyMJOKFbFae3NZmpNHOaIGjv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -396,7 +396,7 @@
         "ylabel(\"x(t)\")\n",
         "show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -453,7 +453,7 @@
         "ylabel(\"x(t)\")\n",
         "show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -528,7 +528,7 @@
         "ylabel(\"y(t)\")\n",
         "show()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -562,6 +562,44 @@
       "cell_type": "code",
       "metadata": {
         "id": "7wXozzIyoflq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from numpy import empty,zeros,max\n",
+        "from pylab import imshow,gray,show\n",
+        "import pylab as plt\n",
+        "\n",
+        "M = 100\n",
+        "V = 1.0\n",
+        "target = 1e-5\n",
+        "\n",
+        "phi = zeros([M+1,M+1],float)\n",
+        "phi[0,:] = V\n",
+        "phiprime = empty([M+1,M+1],float)\n",
+        "\n",
+        "delta = 1.0\n",
+        "while delta > target:\n",
+        "  for i in range(M+1):\n",
+        "    for j in range(M+1):\n",
+        "      if i == 0 or i == M or j == 0 or j == M:\n",
+        "        phiprime[i,j] = phi[i,j]\n",
+        "      else:\n",
+        "        phiprime[i,j] = (phi[i+1,j]+phi[i-1,j] + phi[i,j+1] + phi[i,j-1]) / 4       \n",
+        "  delta = max(abs(phi-phiprime))\n",
+        "  phi,phiprime = phiprime, phi\n",
+        "\n",
+        "imshow(phi,cmap=plt.get_cmap('cool'))\n",
+        "#gray()\n",
+        "show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QJalLJ-HC9xu",
         "colab_type": "code",
         "colab": {}
       },
