--- a/temp2_pynb.ipynb
+++ b/temp2_pynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp2.pynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPivJpA/FBi1IynqFkzG119",
+      "authorship_tag": "ABX9TyO1JLO+UIkxtNrAwyu00cHR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -661,6 +661,182 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XpaJffgYSR-K",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "456a1d63-0d86-4918-caa8-5088d474dfcd"
+      },
+      "source": [
+        "from numpy import random,sqrt,pi\n",
+        "import time\n",
+        "\n",
+        "tstart = time.perf_counter()\n",
+        "\n",
+        "N = 5000000\n",
+        "nin = 0\n",
+        "for i in range(N):\n",
+        "  x = random.uniform(-1,1,1)\n",
+        "  y = random.uniform(-1,1,1)\n",
+        "  r = sqrt(x*x+y*y)  \n",
+        "  if (r < 1):\n",
+        "    nin = nin+1\n",
+        "tend = time.perf_counter()\n",
+        "\n",
+        "print(\"Estimate for pi with N = \",N,\" is \",4*nin/N)\n",
+        "print(\"The estimate took \",(tend - tstart),\"seconds\")"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Estimate for pi with N =  5000000  is  3.1415888\n",
+            "The estimate took  55.02203737100001 seconds\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iVYxhvQtTdTi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "01871c44-3b53-4635-b72b-e96b57eea1a3"
+      },
+      "source": [
+        "# Faster way to check if the points are inside the circle\n",
+        "# General rule is to avoid \"for\" loops if a simple numpy expression can be written\n",
+        "\n",
+        "from numpy import zeros,random,pi\n",
+        "import time\n",
+        "\n",
+        "tstart = time.perf_counter()\n",
+        "\n",
+        "N = 5000000\n",
+        "\n",
+        "results = zeros(N)\n",
+        "x_values = random.uniform(-1, 1, N)\n",
+        "y_values = random.uniform(-1, 1, N)\n",
+        "# the following means: \"for the indices where the point satisifies x**2 + y**2 <= 1, set results to 1\"\n",
+        "# note that we don't actually need the square root, either! And the mean is perfect to use since for zeros or ones it is just the fraction passing, which is what we want\n",
+        "results[x_values**2 + y_values**2 <= 1] = 1\n",
+        "\n",
+        "tend = time.perf_counter()\n",
+        "\n",
+        "print(\"Estimate for pi with N = \",N,\" is \",4*results.mean())\n",
+        "print(\"The estimate took \",(tend - tstart),\"seconds\")"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Estimate for pi with N =  5000000  is  3.1418008\n",
+            "The estimate took  0.1766990120000287 seconds\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cnzTJYqNUqfw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "f4ff7c51-32a1-4088-a836-c3b282164631"
+      },
+      "source": [
+        "# Even faster - skip filling the results array, since we don't actually care *which* points are inside the\n",
+        "# circle, just how many there are\n",
+        "# when the expression is True, sum counts it as 1, and when the expression is False, sum counts it as zero\n",
+        "\n",
+        "from numpy import zeros,random,pi,sum\n",
+        "import time\n",
+        "\n",
+        "tstart = time.perf_counter()\n",
+        "\n",
+        "N = 5000000\n",
+        "\n",
+        "results = zeros(N)\n",
+        "x_values = random.uniform(-1, 1, N)\n",
+        "y_values = random.uniform(-1, 1, N)\n",
+        "count = sum(x_values**2 + y_values**2 <= 1)\n",
+        "\n",
+        "tend = time.perf_counter()\n",
+        "print(\"Estimate for pi with N = \",N,\" is \",4*count/N)\n",
+        "print(\"The estimate took \",(tend - tstart),\"seconds\")"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Estimate for pi with N =  5000000  is  3.1427208\n",
+            "The estimate took  0.15959697000005235 seconds\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wrv55lLsVF1I",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "159393ad-b43f-46cc-9009-405bfdcfed91"
+      },
+      "source": [
+        "# Even faster - skip filling the results array, since we don't actually care *which* points are inside the\n",
+        "# circle, just how many there are\n",
+        "# when the expression is True, sum counts it as 1, and when the expression is False, sum counts it as zero\n",
+        "### now do a large scale check\n",
+        "from numpy import zeros,random,pi,sum\n",
+        "import time\n",
+        "\n",
+        "tstart = time.perf_counter()\n",
+        "\n",
+        "N = 50000000\n",
+        "\n",
+        "results = zeros(N)\n",
+        "x_values = random.uniform(-1, 1, N)\n",
+        "y_values = random.uniform(-1, 1, N)\n",
+        "count = sum(x_values**2 + y_values**2 <= 1)\n",
+        "\n",
+        "tend = time.perf_counter()\n",
+        "print(\"Estimate for pi with N = \",N,\" is \",4*count/N)\n",
+        "print(\"The estimate took \",(tend - tstart),\"seconds\")"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Estimate for pi with N =  50000000  is  3.1420864\n",
+            "The estimate took  1.6994603090000737 seconds\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
