--- a/temp2_pynb.ipynb
+++ b/temp2_pynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp2.pynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO1JLO+UIkxtNrAwyu00cHR",
+      "authorship_tag": "ABX9TyPEqEngUBFVfG5YJ1OpI35W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1095,6 +1095,76 @@
       "cell_type": "code",
       "metadata": {
         "id": "2fJWvU740QhU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "5fc3f445-666a-4094-fa22-1765e367509a"
+      },
+      "source": [
+        "# The \"slow\" way, maybe easier at first, and still faster than much of the above\n",
+        "import numpy\n",
+        "\n",
+        "N = 500000\n",
+        "x_values = numpy.random.uniform(0, 1, N)\n",
+        "results = numpy.zeros(N)\n",
+        "\n",
+        "print(\"done generating random numbers\")\n",
+        "\n",
+        "for attempt in range(N):\n",
+        "    results[attempt] = math.sqrt(1-x_values[attempt]**2)\n",
+        "    \n",
+        "# our estimate of the integral (=pi/4) is the total value of results, times the range we're choosing random numbers over\n",
+        "# (1), divided by the number of attempts (= the mean result * 1)\n",
+        "print(f\"Our estimate of pi: {results.mean()*4}\")"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "done generating random numbers\n",
+            "Our estimate of pi: 3.1401902617790585\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CyURxnfQYSF1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a1f70a09-52a9-4a3c-9c5a-61fa80dd01a2"
+      },
+      "source": [
+        "# the \"fast\" way, using numpy tricks\n",
+        "import numpy\n",
+        "N = 500000\n",
+        "x_values = numpy.random.uniform(0, 1, N)\n",
+        "results = numpy.sqrt(1-x_values**2) # evaluate all together\n",
+        "print(f\"Our estimate of pi: {results.mean()*4}\")"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Our estimate of pi: 3.137673840785929\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zwfDTF7MYi9K",
         "colab_type": "code",
         "colab": {}
       },
