--- a/temp2_pynb.ipynb
+++ b/temp2_pynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp2.pynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPGEbuFxImE9+QE2tHYXspP",
+      "authorship_tag": "ABX9TyNgkZB9FdVqpXuZPs9GCO1S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -390,7 +390,7 @@
         "            print (\"N = \" + str(n) + \",  Integral = \" + str( h*s ))\n",
         "    return h * s\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -438,7 +438,7 @@
         "legend()\n",
         "show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,7 +521,7 @@
         "ylabel(\"Heat Capacity (J/K)\")\n",
         "show()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -568,7 +568,7 @@
         "show()\n",
         "\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -626,7 +626,7 @@
         "print(simpson_simple(funcI,0.0001,200,20000))\n",
         "print(simpson_simple(funcI,0.0001,400,40000))\n"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,7 +689,7 @@
         "legend()\n",
         "show()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -801,7 +801,7 @@
         "colorbar()\n",
         "show()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -906,7 +906,7 @@
         "colorbar()\n",
         "show()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1104,7 +1104,7 @@
         "show()\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1164,7 +1164,7 @@
         "ylabel(\"Solution of x = 1- exp(-cx)\")\n",
         "show()\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1300,6 +1300,79 @@
           "output_type": "stream",
           "text": [
             "It took 126 iterations to find x =  3.74107809105797 with f(x) =  -2.9103830456733704e-11\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7E3Yv5pbodZi",
+        "outputId": "d1f69dbc-155e-4e13-db39-361d00414717",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "# Exercise 6.17 using Newton's method\n",
+        "from math import sqrt,exp\n",
+        "R1 = 1000.0\n",
+        "R2 = 4000.0\n",
+        "R3 = 3000.0\n",
+        "R4 = 2000.0\n",
+        "Vp = 5.0\n",
+        "VT = 0.05\n",
+        "I0 = 3.0e-9\n",
+        "target = 1.0e-8\n",
+        "\n",
+        "# initial guesse\n",
+        "V1 = 1.0\n",
+        "V2 = 1.0\n",
+        "\n",
+        "# Main loop\n",
+        "error = 1.0\n",
+        "while error > target:\n",
+        "  # Calculate matrix elements and determinant\n",
+        "  x = exp((V1-V2)/VT)*I0/VT\n",
+        "  a = 1/R1 + 1/R2 + x\n",
+        "  b = -x\n",
+        "  c = -x\n",
+        "  d = 1/R3 + 1/R4 + x\n",
+        "  det = a*d - b*c\n",
+        "\n",
+        "  # Calculate inverse\n",
+        "  ia = d/det\n",
+        "  id = a/det\n",
+        "  ib = -b/det\n",
+        "  ic = -c/det\n",
+        "  \n",
+        "  # Calculate vector elements\n",
+        "  y = I0*(exp(((V1-V2)/VT)-1))\n",
+        "  z1 = (V1-Vp)/R1 + V1/R2 + y\n",
+        "  z2 = (V2-Vp)/R3 + V2/R4 - y\n",
+        "\n",
+        "  # Calculate delta x\n",
+        "  deltaV1 = ia*z1 + ib*z2\n",
+        "  deltaV2 = ic*z1 + id*z2\n",
+        "\n",
+        "  # Calculate the error\n",
+        "  error = sqrt(deltaV1**2+deltaV2**2)\n",
+        "\n",
+        "  # Calculate new voltages\n",
+        "  V1 -= deltaV1\n",
+        "  V2 -= deltaV2\n",
+        "\n",
+        "# Print results\n",
+        "print(V1,V2)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3.466244495626595 2.8006332565601078\n"
           ],
           "name": "stdout"
         }
