--- a/temp2_pynb.ipynb
+++ b/temp2_pynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp2.pynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN6dwdeTBSZk/P9UgABvKzs",
+      "authorship_tag": "ABX9TyOPtHWwCUJnm1U4UPlsHTRS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1436,7 +1436,7 @@
         "discreteft(f_sawtooth,\"Sawtooth\")\n",
         "discreteft(f_sin,\"sin(pi*n/N)*sin(20*pi*n/N)\")\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1568,7 +1568,7 @@
         "ylim(0,5e9)\n",
         "show()"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1655,7 +1655,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1704,7 +1704,7 @@
         "for i in range(0,150):\n",
         "  print(i,abs(c[i])**2)\n"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1910,7 +1910,7 @@
         "xlim(0,100) ### zoom in here\n",
         "plt.show()\n"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1992,7 +1992,7 @@
         "ylabel(\"x(t)\")\n",
         "show()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2065,7 +2065,7 @@
         "legend()\n",
         "show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2149,7 +2149,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2290,7 +2290,7 @@
         "ylabel(\"Delta(y(t)\")\n",
         "show()\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2398,7 +2398,7 @@
         "ylabel(\"y(t)\")\n",
         "show()\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2491,7 +2491,7 @@
         "xlim(-0.5e12,4.5e12)\n",
         "show()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2600,7 +2600,7 @@
         "xlim(-0.5e12,4.5e12)\n",
         "show()"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2738,7 +2738,7 @@
         "show()\n",
         "\n"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2791,6 +2791,112 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "4CfQ2SM0C0hO"
+      },
+      "source": [
+        "# Double pendulum, some interesting plots (not animation)\n",
+        "from math import sin,cos,pi\n",
+        "from numpy import arange,array\n",
+        "from matplotlib.pyplot import plot,show,figure,xlabel,ylabel\n",
+        "\n",
+        "# Function f(r)\n",
+        "def f(r,l):\n",
+        "  g = 9.81\n",
+        "  theta1 = r[0]\n",
+        "  theta2 = r[1]\n",
+        "  omega1 = r[2]\n",
+        "  omega2 = r[3]\n",
+        "  ftheta1 = omega1\n",
+        "  ftheta2 = omega2\n",
+        "  fomega1 = -(omega1*omega1*sin(2*theta1-2*theta2) + 2*omega2*omega2*sin(theta1-theta2) + (3*sin(theta1) + sin(theta1-2*theta2))*g/l)/(3-cos(2*theta1-2*theta2))\n",
+        "  fomega2 = (4*omega1*omega1*sin(theta1-theta2) + omega2*omega2*sin(2*theta1-2*theta2) - 2*(sin(theta2)-sin(2*theta1-theta2))*g/l)/(3-cos(2*theta1-2*theta2))\n",
+        "  return array([ftheta1,ftheta2,fomega1,fomega2],float)\n",
+        "\n",
+        "\n",
+        "# Main Program from arbitrary starting values\n",
+        "def runDoublePendulum(theta1,theta2,omega1,omega2,tf=50.,nstep=100000,l = 0.5):\n",
+        "  t = 0\n",
+        "  h = (tf-t)/nstep\n",
+        "  r = array([theta1,theta2,omega1,omega2])\n",
+        "  thetas_1 = []\n",
+        "  thetas_2 = []\n",
+        "  omegas_1 = []\n",
+        "  omegas_2 = []\n",
+        "\n",
+        "  # Main loop\n",
+        "  while t < tf:\n",
+        "    thetas_1.append(r[0])\n",
+        "    thetas_2.append(r[1])\n",
+        "    omegas_1.append(r[2])\n",
+        "    omegas_2.append(r[3])\n",
+        "\n",
+        "    k1 = h*f(r,l)\n",
+        "    k2 = h*f(r+0.5*k1,l)\n",
+        "    k3 = h*f(r+0.5*k2,l)\n",
+        "    k4 = h*f(r+k3,l)\n",
+        "    r += (k1+2*k2+2*k3+k4)/6\n",
+        "  \n",
+        "    # Update\n",
+        "    t += h\n",
+        "  return (thetas_1, thetas_2, omegas_1, omegas_2)  "
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iWXJXoTXGBjj",
+        "outputId": "f7f813a3-a9b6-4010-a701-8289bd2fc25e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 409
+        }
+      },
+      "source": [
+        "thetas_1_a, thetas_2_a, omegas_1_a, omegas_2_a = runDoublePendulum(1.5,2.0,0.0,0.0)\n",
+        "thetas_1_b, thetas_2_b, omegas_1_b, omegas_2_b = runDoublePendulum(2.0,1.5,0.0,0.0)\n",
+        "thetas_1_c, thetas_2_c, omegas_1_c, omegas_2_c = runDoublePendulum(2.0,1.5,0.1,0.1)\n",
+        "thetas_1_d, thetas_2_d, omegas_1_d, omegas_2_d = runDoublePendulum(2.0,1.5,-0.1,0.1)\n",
+        "fig = figure(figsize=(10,10))\n",
+        "plot(thetas_1_a,thetas_2_a)\n",
+        "plot(thetas_1_b,thetas_2_b)\n",
+        "plot(thetas_1_c,thetas_2_c)\n",
+        "plot(thetas_1_d,thetas_2_d)\n",
+        "xlabel(\"theta_1\")\n",
+        "ylabel(\"theta_2\")\n",
+        "show()\n",
+        "\n",
+        "fig = figure(figsize=(10,10))\n",
+        "plot(omegas_1_a,omegas_2_a)\n",
+        "plot(omegas_1_b,omegas_2_b)\n",
+        "plot(omegas_1_c,omegas_2_c)\n",
+        "plot(omegas_1_d,omegas_2_d)\n",
+        "xlabel(\"$\\omega_1$\")\n",
+        "ylabel(\"$\\omega_2$\")\n",
+        "show()\n",
+        "\n"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-29-31ad56d41532>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mthetas_1_a\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthetas_2_a\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0momegas_1_a\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0momegas_2_a\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrunDoublePendulum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mthetas_1_b\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthetas_2_b\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0momegas_1_b\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0momegas_2_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrunDoublePendulum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mthetas_1_c\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthetas_2_c\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0momegas_1_c\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0momegas_2_c\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrunDoublePendulum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mthetas_1_d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthetas_2_d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0momegas_1_d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0momegas_2_d\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrunDoublePendulum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-23-8da06dbd31ec>\u001b[0m in \u001b[0;36mrunDoublePendulum\u001b[0;34m(theta1, theta2, omega1, omega2, tf, nstep, l)\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0momegas_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m     \u001b[0mk1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m     \u001b[0mk2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mk1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0mk3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mk2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-23-8da06dbd31ec>\u001b[0m in \u001b[0;36mf\u001b[0;34m(r, l)\u001b[0m\n\u001b[1;32m     15\u001b[0m   \u001b[0mfomega1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0momega1\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0momega1\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0momega2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0momega2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mtheta2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mcos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m   \u001b[0mfomega2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0momega1\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0momega1\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mtheta2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0momega2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0momega2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mtheta2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mcos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mftheta1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mftheta2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfomega1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfomega2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "7wXozzIyoflq",
         "outputId": "c678251f-315e-4195-fb94-2280c7aaf212",
         "colab": {
@@ -2826,7 +2932,7 @@
         "#gray()\n",
         "show()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
